Background color wasn't quite right

--- a/403.html
+++ b/403.html
@@ -3,7 +3,7 @@
   <head>
     <title>Uh uh uh! You didn't say the magic word!</title>
     <style>
-      body { background-color: #fff; }
+      body { background-color: #fafafa; }
       #wrapper { position: absolute; top: 50%; margin-top: -124px; left: 0; width: 100%; }
       #nedry { height: 248px; width: 320px; margin: 0 auto; }
     </style>
